--- a/src/stylesheets/focus_highlighting.css
+++ b/src/stylesheets/focus_highlighting.css
@@ -2,12 +2,16 @@
  * Default style sheet on Windows Platforms with focus highlighting flag enabled
  */
 ads--CDockContainerWidget {
-	background: palette(dark);
+	/*background: palette(dark);*/
 }
 
 ads--CDockAreaWidget {
 	background: palette(window);
-	border: 1px solid white;
+	/*border: 1px solid palette(dark);*/
+}
+
+ads--CDockManager {
+	padding-left: 6px;
 }
 
 ads--CDockWidgetTab {
@@ -19,8 +23,9 @@ ads--CDockWidgetTab {
 }
 
 ads--CDockWidgetTab[activeTab="true"] {
-	background: qlineargradient(spread : pad, x1 : 0, y1 : 0, x2 : 0, y2 : 0.5, stop : 0
-		palette(window), stop:1 palette(light));
+	background: rgb(204, 204, 204);
+	/*background: qlineargradient(spread : pad, x1 : 0, y1 : 0, x2 : 0, y2 : 0.5, stop : 0
+		palette(window), stop:1 palette(mid));*/
 	/*background: palette(highlight);*/
 }
 
@@ -34,9 +39,11 @@ ads--CDockWidgetTab[activeTab="true"] QLabel {
 
 ads--CDockWidget {
 	background: palette(light);
-	border-color: palette(light);
+	/*border-color: palette(dark);
 	border-style: solid;
-	border-width: 1px 0 0 0;
+	border-width: 1px 0 0 0;*/
+	border: 1px solid rgb(204, 204, 204);
+	border-top: none;
 }
 
 ads--CTitleBarButton {
@@ -84,7 +91,7 @@ QScrollArea#dockWidgetScrollArea {
 }
 
 ads--CDockSplitter::handle {
-	background-color: palette(dark);
+	/*background-color: palette(dark);*/
 	/* uncomment the following line if you would like to change the size of
        the splitter handles */
 	/* height: 1px; */
@@ -114,7 +121,7 @@ ads--CDockWidgetTab[focused="true"] QLabel {
 
 ads--CDockAreaTitleBar {
 	background: transparent;
-	border-bottom: 2px solid palette(light);
+	border-bottom: 2px solid rgb(204, 204, 204);
 	padding-bottom: 0px;
 }
 
