Added AutoHide icon and button

--- a/src/ads.qrc
+++ b/src/ads.qrc
@@ -14,5 +14,7 @@
         <file>images/maximize-button-focused.svg</file>
         <file>images/restore-button.svg</file>
         <file>images/restore-button-focused.svg</file>
+        <file>images/autohide-button.svg</file>
+        <file>images/autohide-button-active.svg</file>
     </qresource>
 </RCC>
